# ha-NintendoSwitchCFW

./: .gitignore  CHANGELOG_BODY.md  README.md  build_switch.ps1  hacs.json  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_connection.yml  config.yml  feature_request.yml
.github/instructions/: ai-context.md
.github/scripts/: bump_version.py  version_manager.py
.github/workflows/: auto-labeler.yml  issue-orchestrator.yml  lint.yml  release.yml  sysmodule_validation.yml  test.yml
custom_components/switch_cfw/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  remote.py  select.py  sensor.py  strings.json  update.py
custom_components/switch_cfw/translations/: de.json  en.json
docs/: api.md
scripts/: gen_npdm_json.py  set_version.py  validate_sysmodule.py
switch_app/: Makefile  main.cpp
switch_sysmodule/: ConfigManager.cpp  Makefile  homeassistant_sysmodule.json  main  main.cpp  main.json  main.npdm
switch_sysmodule/flags/: boot2.flag
switch_sysmodule/include/: ConfigManager.h  Logger.h  SysmoduleConstants.h
switch_sysmodule/tests/: Makefile  MockLibnx.h  run_tests  test_config.cpp
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_i18n.py  test_select.py  test_sensor.py  test_update.py
