[project]
name = "ha-NintentdoSwitchCFW"
version = "0.1.6"
description = "Home Assistant integration for Nintendo Switch CFW"
readme = "README.md"
authors = [
    { name = "FaserF" }
]
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.13.3",
    "homeassistant>=2024.1.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "custom_components"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
