[project]
name = "ha-NintendoSwitchCFW"
version = "0.1.6"
description = "Home Assistant integration for Nintendo Switch CFW"
readme = "README.md"
authors = [
    { name = "FaserF" }
]
license = { text = "MIT" }
requires-python = ">=3.14.2"
dependencies = [
    "aiohttp>=3.13.3",
    "homeassistant>=2026.3.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "respx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "custom_components"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
